fixed overflow

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -248,7 +248,7 @@ label {cursor: pointer; padding: 5px;}
 	background: rgba(255,255,255,.94);
 	top: 0;
 	left: 0;
-	max-height: 100%;
+	max-height: 4.17in;
 	overflow: scroll;
 	@include box-shadow(0px 1px 3px #bbb);
 }
